@@ -73,13 +73,13 @@
 
 		  <child>
 		    <widget class="GtkImage" id="entry_image">
-		      <property name="width_request">241</property>
 		      <property name="height_request">23</property>
 		      <property name="visible">True</property>
 		      <property name="xalign">0</property>
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <signal name="size_allocate" handler="title_size_allocate" last_modification_time="Thu, 01 Jul 2004 21:29:25 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
